# NodeEditor

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.MD  create_makefiles.sh  create_msvc_15_2017.bat  create_xcode.sh  nodeeditor.sln.DotSettings  readme.md
cmake/: assign_source_group.cmake  kurva_anyad.cmake
src/application/: Application.cpp  Application.h  Application.hpp  CMakeLists.txt  Editor.cpp  Editor.h  Editor.hpp  EditorView.h  MainWindow.cpp  MainWindow.h  MainWindow.hpp
src/application/abstract/: Data.hpp  Module.cpp  Module.hpp  Node.hpp  NodeType.cpp  NodeType.hpp  fwd.hpp
src/application/datamodel/: GraphModel.cpp  GraphModel.hpp
src/application/model/: Converters.cpp  Converters.hpp  DataModel.cpp  DataModel.h  DataPort.cpp  DataPort.h  MathOperationDataModel.cpp  MathOperationDataModel.hpp  ModuloModel.cpp  ModuloModel.hpp  NumberDisplayDataModel.cpp  NumberSourceDataModel.cpp  NumberSourceDataModel.hpp
src/application/res/: resources.qrc
src/platform/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt  main.cpp
src/platform/mac/: CMakeLists.txt  main.cpp
src/platform/windows/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  deploy_tests.cmake  main.cpp  test_node_framework.cpp
